solucion de item detail

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -3,3 +3,12 @@
     border: 1px solid #9236b481;
     border-radius: 15px;
 }
+.container-total{ 
+    background-color: rgba(29, 243, 6, 0.521);
+    padding: 10px 20px;
+    color: rgb(0, 0, 0);
+    font-weight: bolder;
+    
+    
+    
+}
