--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,3 +1,8 @@
+*{font-family: 'Playfair Display', serif;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Quicksand', sans-serif;
+    font-family: 'Space Grotesk', sans-serif;
+}
 .font-card{
     font-size: 30px;
     border: 1px solid #9236b481;
@@ -9,6 +14,10 @@
     color: rgb(0, 0, 0);
     font-weight: bolder;
     
-    
-    
+}
+.container-total{
+    background-color: rgba(29, 243, 6, 0.521);
+    padding: 10px 20px;
+    color: rgb(0, 0, 0);
+    font-weight: bolder;
 }
